[gd_scene load_steps=8 format=2]

[ext_resource path="res://RadarGame/Scenes/RadarScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://RadarGame/Prefabs/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://RadarGame/Scripts/GameplayScreen.gd" type="Script" id=3]
[ext_resource path="res://RadarGame/Sprites/HandBook/CheatSheet.png" type="Texture" id=4]
[ext_resource path="res://GlobalTimer/ResetGamePopup.tscn" type="PackedScene" id=5]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[node name="Root" type="Node2D"]
rotation = -0.000396126
script = ExtResource( 3 )

[node name="Pivot" parent="." instance=ExtResource( 2 )]

[node name="RadarButton" type="Button" parent="Pivot"]
margin_left = 878.0
margin_top = 549.0
margin_right = 972.0
margin_bottom = 572.0
text = "Radar"

[node name="RadarButton" type="Button" parent="Pivot/RadarButton"]
margin_left = 878.0
margin_top = 549.0
margin_right = 972.0
margin_bottom = 572.0
text = "Radar"

[node name="HandbookButton" type="Button" parent="Pivot"]
margin_left = 878.0
margin_top = 520.0
margin_right = 972.0
margin_bottom = 543.0
text = "Handbook"

[node name="CheatSheet" type="Sprite" parent="Pivot/HandbookButton"]
position = Vector2( -92.794, -260.348 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 4 )

[node name="Radar" parent="." instance=ExtResource( 1 )]
margin_left = 10.0
margin_top = -1.0
margin_right = 10.0
margin_bottom = -1.0
rect_rotation = -0.0754832

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2.8, 2.47968 )

[node name="Score" type="Label" parent="Control"]
margin_right = 40.0
margin_bottom = 14.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Popup" parent="CanvasLayer" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -50.0
margin_right = -88.0
margin_bottom = -10.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="QuitButton" type="Button" parent="."]
margin_left = 15.7734
margin_top = 572.006
margin_right = 55.7734
margin_bottom = 592.006
text = "Quit"

[connection signal="pressed" from="Pivot/RadarButton" to="." method="_on_RadarButton_pressed"]
[connection signal="pressed" from="Pivot/RadarButton/RadarButton" to="." method="_on_RadarButton_pressed"]
[connection signal="button_down" from="Pivot/HandbookButton" to="." method="_on_HandbookButton_button_down"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
